Sun Jun 11 07:27:11 2006  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/rdoc/ri/ri_writer.rb: use String#ord.

Sun Jun 11 04:38:20 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (sym_to_proc): imported Symbol#to_proc from ActiveSupprot.

Sat Jun 10 18:02:40 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/bigdecimal/lib/bigdecimal/newton.rb (Newton::nlsolve): typo
	  fixed: raize -> raise.  [ruby-talk:196608]

Sat Jun 10 17:49:53 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_ord): new method.

	* parse.y (rbracket): allow optional newline before closing
	  brackets.

Sat Jun 10 15:12:29 2006  NAKAMURA Usaku  <usa@ruby-lang.org>

	* eval.c (rb_f_method_name, rb_f_callee_name): new functions.
	  new global method `__method__' and `__callee__'.

Sat Jun 10 10:13:13 2006  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/getoptlong.rb (GetoptLong#set_options): recieve arguments
	  as Array.

	* lib/irb/slex.rb: use Proc#yield.

	* lib/rdoc/markup/simple_markup/inline.rb: follow the new behavior
	  of String#[].

	* lib/rdoc/ri/ri_writer.rb: ditto.

Sat Jun 10 08:17:23 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* math.c (log2): may be a macro.

	* parse.y (args, block_param, f_args): pass f_post_arg to #params.

	* util.c (powersOf10): constified.

	* ext/readline/readline.c: include extconf.h first.

	* ext/ripper/eventids2.c: removed tLAMBDA_ARG.

	* ext/tk/tcltklib.c (lib_fromUTF8_core): removed conflict.

	* ext/tk/tkutil/tkutil.c (cbsubst_get_subst_arg): rb_id2name() is
	  defined as const now.

	* ext/win32ole/win32ole.c (fole_missing): ditto.

	* lib/mkmf.rb (create_makefile): force to create extconf header.

	* lib/optparse.rb (order!): use Proc#yield.

Sat Jun 10 06:53:22 2006  NAKAMURA Usaku  <usa@ruby-lang.org>

	* eval.c (CALLARGS): remove last semicolon. C90 compiler doesn't
	  allow any lines (even if they're empty) within variable
	  declaretions.

Fri Jun  9 09:56:32 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>
