@@ -1,3 +1,7 @@
+Sun Jun %-2d 08:30:33 2006  U-HUDIE\nobu,S-1-5-21-3746871489-166115513-3294629105-1005  <nobu@ruby-lang.org>
+
+	* lib/optparse.rb (OptionParser#getopts): new methods.
+
 Sun Jun 11 07:27:11 2006  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* lib/rdoc/ri/ri_writer.rb: use String#ord.
